import content.js

--- a/popup.html
+++ b/popup.html
@@ -6,9 +6,10 @@
       body {
         width: 150px;
         height: 80px;
-    }
+      }
     </style>
     <script src="popup.js"></script>
+    <script src="content.js"></script>
   </head>
   <body>
     <button id="toggleButton">Toggle 2x Speed</button>
