Fix refresh issue. Will refactor the busy waiting out at another time.

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,6 @@
     <script src="content.js"></script>
   </head>
   <body>
-    <button id="toggleButton">Toggle 2x Speed</button>
+    <button id="toggleButton">Toggle 2x Speed on/off</button>
   </body>
 </html>
